; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/phy/extr_spi_ks8995.c_ks8995_parse_dt.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/phy/extr_spi_ks8995.c_ks8995_parse_dt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ks8995_switch = type { %struct.ks8995_pdata*, %struct.TYPE_4__* }
%struct.ks8995_pdata = type { i32, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.device_node* }
%struct.device_node = type { i32 }

@.str = private unnamed_addr constant [12 x i8] c"reset-gpios\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ks8995_switch*)* @ks8995_parse_dt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ks8995_parse_dt(%struct.ks8995_switch* %0) #0 {
  %2 = alloca %struct.ks8995_switch*, align 8
  %3 = alloca %struct.device_node*, align 8
  %4 = alloca %struct.ks8995_pdata*, align 8
  store %struct.ks8995_switch* %0, %struct.ks8995_switch** %2, align 8
  %5 = load %struct.ks8995_switch*, %struct.ks8995_switch** %2, align 8
  %6 = getelementptr inbounds %struct.ks8995_switch, %struct.ks8995_switch* %5, i32 0, i32 1
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load %struct.device_node*, %struct.device_node** %9, align 8
  store %struct.device_node* %10, %struct.device_node** %3, align 8
  %11 = load %struct.ks8995_switch*, %struct.ks8995_switch** %2, align 8
  %12 = getelementptr inbounds %struct.ks8995_switch, %struct.ks8995_switch* %11, i32 0, i32 0
  %13 = load %struct.ks8995_pdata*, %struct.ks8995_pdata** %12, align 8
  store %struct.ks8995_pdata* %13, %struct.ks8995_pdata** %4, align 8
  %14 = load %struct.device_node*, %struct.device_node** %3, align 8
  %15 = icmp ne %struct.device_node* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %1
  br label %24

17:                                               ; preds = %1
  %18 = load %struct.device_node*, %struct.device_node** %3, align 8
  %19 = load %struct.ks8995_pdata*, %struct.ks8995_pdata** %4, align 8
  %20 = getelementptr inbounds %struct.ks8995_pdata, %struct.ks8995_pdata* %19, i32 0, i32 0
  %21 = call i32 @of_get_named_gpio_flags(%struct.device_node* %18, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 0, i32* %20)
  %22 = load %struct.ks8995_pdata*, %struct.ks8995_pdata** %4, align 8
  %23 = getelementptr inbounds %struct.ks8995_pdata, %struct.ks8995_pdata* %22, i32 0, i32 1
  store i32 %21, i32* %23, align 4
  br label %24

24:                                               ; preds = %17, %16
  ret void
}

declare dso_local i32 @of_get_named_gpio_flags(%struct.device_node*, i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
